@@ -522,7 +522,7 @@ img.sort {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
   font-weight: bold;
-  background-color: #002266;
+  background-color: #000080;
   text-align: left;
 }
 
