@@ -528,7 +528,7 @@ img.sort {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
   font-weight: bold;
-  background-color: #99CCFF;
+  background-color: #F7F7F7;
   text-align: left;
 }
 
