@@ -560,7 +560,7 @@ img.sort {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
   font-weight: bold;
-  background-color: #99CCFF;
+  background-color: #F0F0F0;
   text-align: left;
 }
 
