@@ -21,7 +21,8 @@ NOCC 1.5  ?? ??, ??
     * RFE #1804115 : list of personalised files (Arnaud Boudou).
 
   Misc
-    * Change "currentInbox" to a breadcrumb navigation for IMAP. (Tim Gerundt, 
+    * Harmonize mail header background color (Tim Gerundt).
+    * Change "currentInbox" to a breadcrumb navigation for IMAP (Tim Gerundt, 
       Michael D Young).
     * Hide CSS images with "url()" too (Tim Gerundt).
     * Remove unused $_SESSION['tab_mail'] (Tim Gerundt).
